# Lumigift-lumigift

./: .contract-ids.json  .dockerignore  .env.example  .env.local.example  .env.staging.example  .eslintrc.json  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_QUICK_START.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-POLICY.md  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  TERMS.md  appspec.yaml  codecov.yml  database.json  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  instrumentation.ts  jest.config.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  sentry.client.config.ts  (+7 more)
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts
contracts/escrow/: AMOUNT_LIMITS.md  AUDIT_CHECKLIST.md  BENCHMARKS.md  Cargo.toml  README.md  STORAGE_ANALYSIS.md
contracts/escrow/benches/: escrow_bench.rs
contracts/escrow/src/: lib.rs
docs/: MAINNET_LAUNCH_CHECKLIST.md  api-reference.md  cors-policy.md  data-retention.md  database-schema.md  docker-setup.md  local-dev-setup.md  mutation-score.md  secret-rotation.md  security-audit-escrow-v1.md
e2e/: critical-claim-gift.spec.ts  critical-otp-login.spec.ts  critical-send-gift.spec.ts  dashboard.spec.ts  gift-claim.spec.ts  gift-send.spec.ts  group-gift.spec.ts  login.spec.ts  otp-input.spec.ts  smoke.spec.ts
(+414 files in other folders)
