[package]
name = "lumigift-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
proptest = { version = "1", default-features = false, features = ["std"] }

[[bench]]
name = "escrow_bench"
harness = false

[dev-dependencies.criterion]
version = "0.8"
features = ["html_reports"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
